adding atlas | showing background + player on the scene

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,5 +4,9 @@
 }
 
 canvas {
-  width: 100%;
+  // width: 100%;
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
