--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,9 +4,13 @@
 }
 
 canvas {
-  // width: 100%;
   position: fixed;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
